--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "create-react-app": "^4.0.1",
     "react": "^17.0.1",
@@ -19,9 +19,9 @@
     "react-scripts": "4.0.0",
     "reactstrap": "^8.7.1",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "web-vitals": "^0.2.4",
-    "redux-devtools-extension": "^2.13.8"
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
